init and prevent active index from overflowing

--- a/coverflow/coverflow.css
+++ b/coverflow/coverflow.css
@@ -22,6 +22,7 @@
 
 .listItem {
     -webkit-transition: all .5s ease-out;
+    background-color: #9c9;
     border: 1px solid #000;
     width: 240px;
     height: 160px;
